[gd_scene load_steps=14 format=3 uid="uid://dr18tk67tc6uq"]

[ext_resource type="Script" path="res://game/settings/SettingsScreen.gd" id="1_bstu8"]
[ext_resource type="Theme" uid="uid://dsx7oo1jar5n8" path="res://assets/ui/SettingsTheme.tres" id="2_5ky7v"]
[ext_resource type="Texture2D" uid="uid://ciuyao6wf8s54" path="res://assets/images/ui/settings/settings_button_normal.png" id="3_53c0p"]
[ext_resource type="Texture2D" uid="uid://dlxn50psp55f3" path="res://assets/images/ui/settings/checkbox_unpressed.png" id="3_l1rea"]
[ext_resource type="Texture2D" uid="uid://bxwmppfcxxjb2" path="res://assets/images/ui/settings/settings_button_pressed.png" id="4_fa5hr"]
[ext_resource type="Texture2D" uid="uid://guhcktb4xm66" path="res://assets/images/ui/settings/checkbox_pressed.png" id="4_puohg"]
[ext_resource type="Texture2D" uid="uid://c3va1ykebf8as" path="res://assets/images/ui/settings/settings_button_hover.png" id="5_epp2n"]
[ext_resource type="Texture2D" uid="uid://mdkrgn1ytnhh" path="res://assets/images/ui/settings/checkbox_hover.png" id="5_nre0q"]
[ext_resource type="Theme" uid="uid://c6108lc3jg2cv" path="res://assets/ui/GeneralTheme.tres" id="6_um142"]

[sub_resource type="Animation" id="Animation_mqb4d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Settings:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Settings:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_84cm6"]
resource_name = "disable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Settings:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Settings:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mh6ii"]
resource_name = "enable"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BG:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BG:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Settings:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Settings:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sb0jh"]
_data = {
"RESET": SubResource("Animation_mqb4d"),
"disable": SubResource("Animation_84cm6"),
"enable": SubResource("Animation_mh6ii")
}

[node name="SettingsScreen" type="CanvasLayer"]
script = ExtResource("1_bstu8")

[node name="BG" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.0352941, 0.141176, 0.980392)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 3.5
libraries = {
"": SubResource("AnimationLibrary_sb0jh")
}

[node name="Settings" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_5ky7v")

[node name="CenterContainer" type="CenterContainer" parent="Settings"]
layout_mode = 0
offset_right = 3840.0
offset_bottom = 2160.0

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 97
alignment = 1

[node name="MasterSoundContainer" type="VBoxContainer" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/CenterContainer/VBoxContainer/MasterSoundContainer"]
layout_mode = 2
text = "MASTER_SOUND"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Settings/CenterContainer/VBoxContainer/MasterSoundContainer"]
layout_mode = 2
value = 50.0

[node name="BGMSoundContainer" type="VBoxContainer" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/CenterContainer/VBoxContainer/BGMSoundContainer"]
layout_mode = 2
text = "BGM_SOUND"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Settings/CenterContainer/VBoxContainer/BGMSoundContainer"]
layout_mode = 2

[node name="SFXSoundContainer" type="VBoxContainer" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Settings/CenterContainer/VBoxContainer/SFXSoundContainer"]
layout_mode = 2
text = "SFX_SOUND"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="Settings/CenterContainer/VBoxContainer/SFXSoundContainer"]
layout_mode = 2

[node name="FullscreenContainer" type="HBoxContainer" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 26
alignment = 1

[node name="CheckBox" type="TextureButton" parent="Settings/CenterContainer/VBoxContainer/FullscreenContainer"]
custom_minimum_size = Vector2(200, 210)
layout_mode = 2
focus_mode = 0
toggle_mode = true
texture_normal = ExtResource("3_l1rea")
texture_pressed = ExtResource("4_puohg")
texture_hover = ExtResource("5_nre0q")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="Settings/CenterContainer/VBoxContainer/FullscreenContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 47
text = "FULLSCREEN"
horizontal_alignment = 1
vertical_alignment = 2

[node name="SaveNQuitButton" type="Button" parent="Settings/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("6_um142")
text = "SAVE_AND_EXIT"

[node name="PauseButton" type="TextureButton" parent="."]
offset_left = 3590.0
offset_top = 43.0
offset_right = 4102.0
offset_bottom = 555.0
scale = Vector2(0.4, 0.4)
focus_mode = 0
texture_normal = ExtResource("3_53c0p")
texture_pressed = ExtResource("4_fa5hr")
texture_hover = ExtResource("5_epp2n")

[connection signal="mouse_entered" from="Settings/CenterContainer/VBoxContainer/MasterSoundContainer/HSlider" to="." method="_on_button_mouse_entered"]
[connection signal="value_changed" from="Settings/CenterContainer/VBoxContainer/MasterSoundContainer/HSlider" to="." method="_on_volume_slider_value_changed" binds= [0]]
[connection signal="mouse_entered" from="Settings/CenterContainer/VBoxContainer/BGMSoundContainer/HSlider" to="." method="_on_button_mouse_entered"]
[connection signal="value_changed" from="Settings/CenterContainer/VBoxContainer/BGMSoundContainer/HSlider" to="." method="_on_volume_slider_value_changed" binds= [1]]
[connection signal="mouse_entered" from="Settings/CenterContainer/VBoxContainer/SFXSoundContainer/HSlider" to="." method="_on_button_mouse_entered"]
[connection signal="value_changed" from="Settings/CenterContainer/VBoxContainer/SFXSoundContainer/HSlider" to="." method="_on_volume_slider_value_changed" binds= [2]]
[connection signal="mouse_entered" from="Settings/CenterContainer/VBoxContainer/FullscreenContainer/CheckBox" to="." method="_on_button_mouse_entered"]
[connection signal="toggled" from="Settings/CenterContainer/VBoxContainer/FullscreenContainer/CheckBox" to="." method="_on_fullscreen_toggled"]
[connection signal="mouse_entered" from="Settings/CenterContainer/VBoxContainer/SaveNQuitButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Settings/CenterContainer/VBoxContainer/SaveNQuitButton" to="." method="_on_save_n_quit_button_pressed"]
[connection signal="mouse_entered" from="PauseButton" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
